--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=http://192.168.31.161:5000
+# REACT_APP_API_URL=https://dasweb.onrender.com
+REACT_APP_API_URL=http://localhost:5000
