--- a/server/package.json
+++ b/server/package.json
@@ -6,17 +6,21 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build": "netlify deploy --prod"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^6.13.0",
     "multer": "^1.4.5-lts.1",
+    "netlify-cli": "^17.36.2",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^3.2.0",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
