--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "server",
+  "name": "server_ts",
   "version": "1.0.0",
-  "description": "Server for portfolio website",
-  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "netlify deploy --prod"
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",
+    "build-run": "npm run build && npm start",
+    "clean": "rm -rf dist"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.7.4",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
+    "express": "^4.21.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^6.13.0",
@@ -22,10 +33,5 @@
     "netlify-lambda": "^2.0.16",
     "serverless-http": "^3.2.0",
     "socket.io": "^4.7.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.12"
-  },
-  "author": "das",
-  "license": "ISC"
+  }
 }
